--- a/TestearCosas/pom.xml
+++ b/TestearCosas/pom.xml
@@ -10,8 +10,6 @@
   <name>TestearCosas</name>
   
     <description>Cosas que no involucran Selenium</description> 
-  
-  
    
 	<build> 
 		<plugins> 
@@ -31,6 +29,19 @@
 			</plugin> 
 		</plugins> 
 	</build> 
+	<dependencies>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>3.11.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.14.2</version>
+		</dependency>		 
+		
+</dependencies>
  
 </project>
 
